@@ -53,7 +53,7 @@ typedef struct cynagora cynagora_t;
 
 /* see cynagora.h */
 int cynagora_create(cynagora_t **prcyn, cynagora_type_t type, uint32_t cache_size, const char *socketspec) {
-    printf("cynagora_create(%d, %d, %s)\n", type, cache_size, socketspec?socketspec:"NULL");
+    fprintf(stderr, "cynagora_create(%d, %d, %s)\n", type, cache_size, socketspec?socketspec:"NULL");
     *prcyn = (cynagora_t *)malloc(sizeof(int));
     if (*prcyn == NULL) {
         ERROR("malloc cynagora_t failed");
@@ -63,35 +63,35 @@ int cynagora_create(cynagora_t **prcyn, cynagora_type_t type, uint32_t cache_siz
 }
 
 /* see cynagora.h */
-void cynagora_disconnect(cynagora_t *cynagora) { printf("cynagora_disconnect(%p)\n", (void*)cynagora); }
+void cynagora_disconnect(cynagora_t *cynagora) { fprintf(stderr, "cynagora_disconnect(%p)\n", (void*)cynagora); }
 
 /* see cynagora.h */
 void cynagora_destroy(cynagora_t *cynagora) {
-    printf("cynagora_destroy(%p)\n", (void*)cynagora);
+    fprintf(stderr, "cynagora_destroy(%p)\n", (void*)cynagora);
     free(cynagora);
 }
 
 /* see cynagora.h */
 int cynagora_async_setup(cynagora_t *cynagora, cynagora_async_ctl_cb_t *controlcb, void *closure) {
     (void)controlcb;
-    printf("cynagora_async_setup(%p,%p)\n", (void*)cynagora, (void*)closure);
+    fprintf(stderr, "cynagora_async_setup(%p,%p)\n", (void*)cynagora, (void*)closure);
     return 0;
 }
 
 /* see cynagora.h */
 int cynagora_async_process(cynagora_t *cynagora) {
-    printf("cynagora_async_process(%p)\n", (void*)cynagora);
+    fprintf(stderr, "cynagora_async_process(%p)\n", (void*)cynagora);
     return 0;
 }
 
 /* see cynagora.h */
 int cynagora_cache_resize(cynagora_t *cynagora, uint32_t size) {
-    printf("cynagora_cache_resize(%p, %d)\n", (void*)cynagora, size);
+    fprintf(stderr, "cynagora_cache_resize(%p, %d)\n", (void*)cynagora, size);
     return 0;
 }
 
 /* see cynagora.h */
-void cynagora_cache_clear(cynagora_t *cynagora) { printf("cynagora_cache_clear(%p)\n", (void*)cynagora); }
+void cynagora_cache_clear(cynagora_t *cynagora) { fprintf(stderr, "cynagora_cache_clear(%p)\n", (void*)cynagora); }
 
 static int check(const cynagora_key_t *key)
 {
@@ -100,21 +100,21 @@ static int check(const cynagora_key_t *key)
 
 /* see cynagora.h */
 int cynagora_cache_check(cynagora_t *cynagora, const cynagora_key_t *key) {
-    printf("cynagora_cache_check(%p ,(%s,%s,%s,%s))\n", (void*)cynagora, key->client, key->session, key->user,
+    fprintf(stderr, "cynagora_cache_check(%p ,(%s,%s,%s,%s))\n", (void*)cynagora, key->client, key->session, key->user,
            key->permission);
     return check(key);
 }
 
 /* see cynagora.h */
 int cynagora_check(cynagora_t *cynagora, const cynagora_key_t *key, int force) {
-    printf("cynagora_check(%p ,(%s,%s,%s,%s), %d)\n", (void*)cynagora, key->client, key->session, key->user, key->permission,
+    fprintf(stderr, "cynagora_check(%p ,(%s,%s,%s,%s), %d)\n", (void*)cynagora, key->client, key->session, key->user, key->permission,
            force);
     return check(key);
 }
 
 /* see cynagora.h */
 int cynagora_test(cynagora_t *cynagora, const cynagora_key_t *key, int force) {
-    printf("cynagora_test(%p ,(%s,%s,%s,%s), %d)\n", (void*)cynagora, key->client, key->session, key->user, key->permission,
+    fprintf(stderr, "cynagora_test(%p ,(%s,%s,%s,%s), %d)\n", (void*)cynagora, key->client, key->session, key->user, key->permission,
            force);
     return check(key);
 }
@@ -123,7 +123,7 @@ int cynagora_test(cynagora_t *cynagora, const cynagora_key_t *key, int force) {
 int cynagora_async_check(cynagora_t *cynagora, const cynagora_key_t *key, int force, int simple,
                          cynagora_async_check_cb_t *callback, void *closure) {
     (void)callback;
-    printf("cynagora_async_check(%p ,(%s,%s,%s,%s), %d, %d, %p)\n", (void*)cynagora, key->client, key->session, key->user,
+    fprintf(stderr, "cynagora_async_check(%p ,(%s,%s,%s,%s), %d, %d, %p)\n", (void*)cynagora, key->client, key->session, key->user,
            key->permission, force, simple, (void*)closure);
     return check(key);
 }
@@ -134,7 +134,7 @@ int cynagora_async_check(cynagora_t *cynagora, const cynagora_key_t *key, int fo
 
 /* see cynagora.h */
 int cynagora_get(cynagora_t *cynagora, const cynagora_key_t *key, cynagora_get_cb_t *callback, void *closure) {
-    printf("cynagora_get(%p, %s,%s,%s,%s)\n", (void*)cynagora, key->client, key->session, key->user, key->permission);
+    fprintf(stderr, "cynagora_get(%p, %s,%s,%s,%s)\n", (void*)cynagora, key->client, key->session, key->user, key->permission);
     cynagora_key_t k = {key->client, "*", key->user, "privilege"};
     cynagora_value_t v = {"yes", 0};
     callback(closure, &k, &v);
@@ -149,31 +149,31 @@ int cynagora_get(cynagora_t *cynagora, const cynagora_key_t *key, cynagora_get_c
 
 /* see cynagora.h */
 int cynagora_log(cynagora_t *cynagora, int on, int off) {
-    printf("cynagora_log(%p, %d, %d)\n", (void*)cynagora, on, off);
+    fprintf(stderr, "cynagora_log(%p, %d, %d)\n", (void*)cynagora, on, off);
     return 0;
 }
 
 /* see cynagora.h */
 int cynagora_enter(cynagora_t *cynagora) {
-    printf("cynagora_enter(%p)\n", (void*)cynagora);
+    fprintf(stderr, "cynagora_enter(%p)\n", (void*)cynagora);
     return 0;
 }
 
 /* see cynagora.h */
 int cynagora_leave(cynagora_t *cynagora, int commit) {
-    printf("cynagora_leave(%p, %d)\n", (void*)cynagora, commit);
+    fprintf(stderr, "cynagora_leave(%p, %d)\n", (void*)cynagora, commit);
     return 0;
 }
 
 /* see cynagora.h */
 int cynagora_set(cynagora_t *cynagora, const cynagora_key_t *key, const cynagora_value_t *value) {
-    printf("cynagora_set(%p ,(%s,%s,%s,%s), (%s, %ld))\n", (void*)cynagora, key->client, key->session, key->user,
+    fprintf(stderr, "cynagora_set(%p ,(%s,%s,%s,%s), (%s, %ld))\n", (void*)cynagora, key->client, key->session, key->user,
            key->permission, value->value, value->expire);
     return 0;
 }
 
 /* see cynagora.h */
 int cynagora_drop(cynagora_t *cynagora, const cynagora_key_t *key) {
-    printf("cynagora_drop(%p ,(%s,%s,%s,%s))\n", (void*)cynagora, key->client, key->session, key->user, key->permission);
+    fprintf(stderr, "cynagora_drop(%p ,(%s,%s,%s,%s))\n", (void*)cynagora, key->client, key->session, key->user, key->permission);
     return 0;
 }
